// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KubeConnector CreateManagedClusterView creates and polls ManagedClusterView api 1`] = `
Object {
  "status": Object {
    "conditions": Array [
      Object {
        "lastUpdateTime": "2018-08-15T18:44:41Z",
        "type": "Processing",
      },
    ],
    "result": Object {
      "apiVersion": "v1",
      "kind": "Pod",
      "metadata": Object {
        "creationTimestamp": "2020-05-13T20:24:01Z",
        "generateName": "search-prod-28a0e-search-api-66cf776db5-",
        "labels": Object {
          "app": "search",
          "chart": "search-prod-3.5.0",
          "component": "search-api",
          "heritage": "Helm",
          "pod-template-hash": "66cf776db5",
          "release": "search-prod-28a0e",
        },
        "name": "search-prod-28a0e-search-api-66cf776db5-7bzfh",
        "namespace": "open-cluster-management",
        "resourceVersion": "45078202",
        "selfLink": "/api/v1/namespaces/open-cluster-management/pods/search-prod-28a0e-search-api-66cf776db5-7bzfh",
        "uid": "7ecc7859-5ce4-4e34-8834-bd687c0fe43d",
      },
      "status": Object {
        "conditions": Array [
          Object {
            "lastProbeTime": null,
            "lastTransitionTime": "2020-05-13T20:24:02Z",
            "status": "True",
            "type": "Initialized",
          },
          Object {
            "lastProbeTime": null,
            "lastTransitionTime": "2020-05-13T20:24:33Z",
            "status": "True",
            "type": "Ready",
          },
          Object {
            "lastProbeTime": null,
            "lastTransitionTime": "2020-05-13T20:24:33Z",
            "status": "True",
            "type": "ContainersReady",
          },
          Object {
            "lastProbeTime": null,
            "lastTransitionTime": "2020-05-13T20:24:02Z",
            "status": "True",
            "type": "PodScheduled",
          },
        ],
        "phase": "Running",
        "qosClass": "Burstable",
        "startTime": "2020-05-13T20:24:02Z",
      },
    },
  },
}
`;

exports[`KubeConnector CreateWorkset submits correct arguments and returns selfLink 1`] = `
Array [
  Object {
    "headers": Object {
      "Authorization": "Bearer localdev",
    },
    "json": Object {
      "apiVersion": "mcm.ibm.com/v1alpha1",
      "kind": "ResourceView",
      "metadata": Object {
        "labels": Object {
          "name": "pods-1234",
        },
        "name": "pods-1234",
      },
      "spec": Object {
        "clusterSelector": Object {
          "matchLabels": Object {
            "name": "default",
          },
        },
        "scope": Object {
          "resource": "pods",
        },
        "summaryOnly": false,
      },
    },
    "method": "POST",
    "url": "kubernetes/apis/mcm.ibm.com/v1alpha1/namespaces/default/resourceviews",
  },
]
`;

exports[`KubeConnector CreateWorkset submits correct arguments and returns selfLink 2`] = `
Object {
  "metadata": Object {
    "selfLink": "/apis/mcm.ibm.com/v1alpha1/namespaces/default/resourceviews/test-set",
  },
}
`;

exports[`KubeConnector Get calls httpLib with correct arguments 1`] = `
Array [
  Object {
    "headers": Object {
      "Authorization": "Bearer localdev",
    },
    "method": "GET",
    "url": "kubernetes/api/test",
  },
]
`;

exports[`KubeConnector Get correctly merges additional arguments 1`] = `
Array [
  Object {
    "headers": Object {
      "Authorization": "Bearer localdev",
      "x-custom-header": "test-value",
    },
    "method": "GET",
    "url": "kubernetes/api/test",
  },
]
`;

exports[`KubeConnector Post calls httpLib with correct arguments 1`] = `
Array [
  Object {
    "headers": Object {
      "Authorization": "Bearer localdev",
    },
    "json": Object {
      "body": "test-value",
    },
    "method": "POST",
    "url": "kubernetes/api/test",
  },
]
`;

exports[`KubeConnector WorksetResourceQuery creates and polls workset api 1`] = `
Object {
  "status": Object {
    "conditions": Array [
      Object {
        "lastUpdateTime": "2018-08-15T18:44:41Z",
        "type": "Completed",
      },
    ],
    "results": Object {
      "mycluster.icp": Object {
        "apiVersion": "v1",
        "items": Array [
          [Function],
        ],
        "kind": "PodList",
        "metadata": Array [
          [Function],
        ],
      },
    },
  },
}
`;

exports[`KubeConnector WorksetResourceQuery throws if createWorkset fails 1`] = `[Error: Create Resource View Failed [401] - Unauthorized]`;

exports[`KubeConnector WorksetResourceQuery throws on timeout 1`] = `[Error: Manager request timed out]`;
